@@ -17,6 +17,7 @@ import spacegraph.util.math.Tuple2f;
 import spacegraph.util.math.v2;
 
 import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.function.Predicate;
 
@@ -1787,7 +1788,7 @@ public class ParticleSystem {
             buffer = (T[]) Array.newInstance(klass, m_internalAllocatedCapacity);
             for (int i = 0; i < m_internalAllocatedCapacity; i++) {
                 try {
-                    buffer[i] = klass.newInstance();
+                    buffer[i] = klass.getConstructor().newInstance();
                 } catch (Exception e) {
                     throw new RuntimeException(e);
                 }
